Code inspection fixes